modify JSON array and XMLExport function

--- a/web/summary_review.html
+++ b/web/summary_review.html
@@ -1021,7 +1021,7 @@ TODO:
 		</div>
 
 			<form name="hidden_record_form" method="post" action="FillInForm">
-				<input type="hidden" id="recordJSON" />
+				<input type="hidden" id="recordJSON" name ="recordJSON" />
 			</form>
 
 			<a href='#two' data-role="button" data-icon="arrow-r" data-iconpos="right" rel="external" onClick="submitCurrentRecord()">
