--- a/web/system_sync_status.html
+++ b/web/system_sync_status.html
@@ -247,7 +247,7 @@ function sendLocalRecord()
 	<div id="record_form" style='display:none'></div>
 	
 		<form name="local_record_submit" action="FillInForm" method="post">
-		<input type='hidden' id="json_records" name='json_records' value='' />
+		<input type='hidden' id="json_records" name='recordJSON' value='' />
 		</form>
 	</div>
 
