--- a/web/index.html
+++ b/web/index.html
@@ -53,8 +53,8 @@ window.addEventListener('load', function(e) {
 					<div class='sub_form'>	
 						<form name='login_form' action='LogIn' method='post'>
 							<input type='hidden' name='lat' >
-							<b>Username:</b><br />
-							<input type='text' name='username'/>
+							<b>E-mail address:</b><br />
+							<input type='text' name='username' autocapitalize="off" />
 
 							<b>Password:</b><br />
 							<input type='password' name='password'/>
@@ -69,7 +69,7 @@ window.addEventListener('load', function(e) {
 
 						<a href='javascript:;' onClick="submitForm('login_form')" data-role="button" data-icon="arrow-r" data-iconpos="right" data-theme="b"><div class='mainlink_big_head'>Log in</div></a>
 						
-						<a href='forgot_password.html' data-role="button" data-icon="arrow-r" data-iconpos="right" rel="external">Forgot password?</a>
+					<!--	<a href='forgot_password.html' data-role="button" data-icon="arrow-r" data-iconpos="right" rel="external">Forgot password?</a> -->
 						
 						<a href='register.html' data-role="button" data-icon="arrow-r" data-iconpos="right" rel="external">Register for an account
 						</a>
