--- a/web/register.html
+++ b/web/register.html
@@ -58,6 +58,7 @@ function submitForm(form_name) {
 		
 <div data-role="page">
 		<div data-role='header' data-theme='b'>
+			<a href='index.html' data-transition="reverse">Back</a>
 			<h2>Register</h2>
 	</div>
 	
