--- a/web/welcome.html
+++ b/web/welcome.html
@@ -42,7 +42,7 @@ function initialize_disaster_session()
 	
 	<div data-role="header" data-theme="b">		
 		<h2>Welcome!</h2>
-		<a href='javascript:;'>Log out</a>
+		<a href='index.html'>Log out</a>
 	</div>
 	
 	<div data-role="content">
@@ -54,7 +54,7 @@ function initialize_disaster_session()
 			<div class='mainlink_subtitle'>a disaster assessment</div>
 	</a>
 	
-	<a href='system_sync_status.html' data-role="button" data-icon="arrow-r" data-iconpos="right">
+	<a href='system_sync_status.html' data-role="button" data-icon="arrow-r" data-iconpos="right" rel="external">
 			<div class='mainlink_big_head'>Review</div>
 			<div class='mainlink_subtitle'>assessments you've<br />already completed</div>
 	</a>
