--- a/web/summary_review.html
+++ b/web/summary_review.html
@@ -138,6 +138,8 @@ TODO:
 	{
 		var storedJSON = localStorage.getItem(localStorage.getItem("disasterKey"));
 		jsonObject = eval('(' + storedJSON + ')');
+		
+		document.getElementById("client_name").innerHTML = jsonObject["txt_first_name"] + " " + jsonObject["txt_last_name"];
 
 		// Load all values into the hidden form
 		setValues("tel_house_num");
@@ -468,7 +470,7 @@ TODO:
 <div data-role="page" id="two">
 
 	<div data-role="header" data-theme="b">
-		<a href='#one'>Back</a>
+		<a href='#one' data-rel="back">Back</a>
 		<h2>Sign Waiver</h2>
 	</div><!-- /header -->
 
@@ -481,7 +483,7 @@ TODO:
 		<div class='instruction_text' style='color:red'>The client must read and indicate acceptance of the waiver below.</div>
 
 		<div class='sub_form'>	
-			I, <b></b>, hereby authorize the release of information contained in this form to the American Red Cross, North Hills Community Outreach, Salvation Army, the United Way, the Coordinated Assistance Network, other faith-based, federal and and state emergency assistance agencies for the express and singular purpose of assisting efforts to meet my disaster needs. This information will not be made public or used for anything other than its intended use - disaster relief assistance. I also understand the the information provided here is truthful and accurate and I could face prosecution for fraud if it is discovered that the information is false or intended to defraud the agencies providing assistance.<br /><br />
+			I, <b><div id="client_name"></div>, hereby authorize the release of information contained in this form to the American Red Cross, North Hills Community Outreach, Salvation Army, the United Way, the Coordinated Assistance Network, other faith-based, federal and and state emergency assistance agencies for the express and singular purpose of assisting efforts to meet my disaster needs. This information will not be made public or used for anything other than its intended use - disaster relief assistance. I also understand the the information provided here is truthful and accurate and I could face prosecution for fraud if it is discovered that the information is false or intended to defraud the agencies providing assistance.<br /><br />
 
 			<div class='instruction_text'>Please initial below to indicate your acceptance of these terms:</div>
 			<input type="text" name="initials" style='width:5em' id="initials"/>
