resolving merge issues

--- a/web/welcome.html
+++ b/web/welcome.html
@@ -42,7 +42,7 @@ function initialize_disaster_session()
 	
 	<div data-role="header" data-theme="b">		
 		<h2>Welcome!</h2>
-		<a href='index.html'>Log out</a>
+		<a href='index1.html'>Log out</a>
 	</div>
 	
 	<div data-role="content">
