--- a/web/find_location.html
+++ b/web/find_location.html
@@ -31,8 +31,8 @@
 
 <script type="text/javascript">
 
-// If we haven't generated a response after 15 seconds, just mov eon.
-setTimeout("streetNameIncorrect()",15000);
+// If we haven't generated a response after 25 seconds, just mov eon.
+setTimeout("streetNameIncorrect()",25000);
 
 	var geocoder;
 	var map;
@@ -137,6 +137,8 @@ function streetNameIncorrect()
 
 <div data-role="page">
 	<div data-role="header" data-theme="b">
+            <a href="welcome.jsp" data-rel="back">Back</a>
+
 		<h2>Where are you?</h2>
 	</div>
 
